# exec_simulator

./: .gitignore  README.md  README.txt  attach_moveit.txt  back_orders.txt  export_gaz_plugin_path.sh  filled_data_plotter.py  full_start.sh  new_orders_generator.py  orders.txt  orders_generator.py  permutations.py  prompt_window.sh  reset_world.sh  send_command.py  simu_start.sh  start_bag.sh  stop.sh  test_projection.py
events/: 08-01-2024_10:35:43_N0_t_training__events.p  08-01-2024_10:38:29_N1_1_Human-First_h_instru_tee_events.p  08-01-2024_10:45:00_N2_5_Human-First_h_instru_hfe_events.p  08-01-2024_10:48:55_N3_3_Human-First_h_instru_tee_events.p  08-01-2024_10:52:49_N4_2_Robot-First_h_instru_tee_events.p  08-01-2024_10:55:35_N5_4_Robot-First_h_instru_tee_events.p  08-01-2024_10:58:24_N6_6_Robot-First_h_instru_hfe_events.p  09-01-2024_16:06:12_N0_t_training__events.p  09-01-2024_16:08:51_N1_5_Human-First_h_instru_hfe_events.p  09-01-2024_16:12:53_N2_4_Robot-First_h_instru_tee_events.p  09-01-2024_16:15:28_N3_6_Robot-First_h_instru_hfe_events.p  09-01-2024_16:17:36_N4_2_Robot-First_h_instru_tee_events.p  09-01-2024_16:19:08_N5_3_Human-First_h_instru_tee_events.p  09-01-2024_16:20:42_N6_1_Human-First_h_instru_tee_events.p  09-01-2024_16:36:30_N0_t_training__events.p  09-01-2024_16:39:17_N1_3_Human-First_h_instru_tee_events.p  09-01-2024_16:43:13_N2_1_Human-First_h_instru_tee_events.p  09-01-2024_16:46:34_N3_5_Human-First_h_instru_hfe_events.p  09-01-2024_16:50:35_N4_2_Robot-First_h_instru_tee_events.p  09-01-2024_16:53:29_N5_6_Robot-First_h_instru_hfe_events.p  09-01-2024_16:56:25_N6_4_Robot-First_h_instru_tee_events.p  10-01-2024_16:31:13_N0_t_training__events.p  10-01-2024_16:34:05_N1_1_Human-First_h_instru_tee_events.p  10-01-2024_16:38:23_N2_2_Robot-First_h_instru_tee_events.p  10-01-2024_16:41:56_N3_5_Human-First_h_instru_hfe_events.p  10-01-2024_16:46:39_N4_6_Robot-First_h_instru_hfe_events.p  10-01-2024_16:49:09_N5_4_Robot-First_h_instru_tee_events.p  10-01-2024_16:51:25_N6_3_Human-First_h_instru_tee_events.p  11-01-2024_16:05:20_N0_t_training__events.p  11-01-2024_16:08:04_N1_4_Robot-First_h_instru_tee_events.p  11-01-2024_16:12:34_N2_2_Robot-First_h_instru_tee_events.p.p  11-01-2024_16:14:58_N3_3_Human-First_h_instru_tee_events.p  11-01-2024_16:19:20_N4_1_Human-First_h_instru_tee_events.p  11-01-2024_16:22:37_N5_5_Human-First_h_instru_hfe_events.p  11-01-2024_16:24:20_N6_6_Robot-First_h_instru_hfe_events.p  12-01-2024_10:17:54_N0_t_training__events.p  12-01-2024_10:20:06_N1_4_Robot-First_h_instru_tee_events.p  12-01-2024_10:23:47_N2_1_Human-First_h_instru_tee_events.p  12-01-2024_10:28:14_N3_6_Robot-First_h_instru_hfe_events.p  12-01-2024_10:32:31_N4_5_Human-First_h_instru_hfe_events.p  (+139 more)
misc/: data_plotter.py  generate_video.sh  orders_generator.py  p_values_extractor.py  start_bag.sh
scripts/: full_start.sh  prompt_node.sh  reset_world.sh  simu_start.sh
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: _launch_hand.launch  _launch_robot.launch  _new_empty_world.launch  bringup.launch  launch_robot.launch  new_launch.launch  old_bringup.launch  only_gaz.launch
src/bringup/meshes/human/: hand.dae  hand.stl  human.stl
src/bringup/src/: test.cpp
src/bringup/urdf/: human_gaz.urdf  human_hand.urdf  panda1.urdf  panda1_gaz.urdf  panda2.urdf  panda2_gaz.urdf
src/control/: package.xml
src/description/: CMakeLists.txt  package.xml
src/description/launch/: gazebo.launch
src/description/urdf/: TEST.urdf  TEST_gaz.urdf  panda.urdf  panda1.urdf  panda1_gaz.urdf  panda2.urdf  panda2_gaz.urdf  panda_gaz.urdf
src/example_plugin/: CMakeLists.txt  package.xml
src/exec_automaton/: CMakeLists.txt  package.xml
src/gazebo_plugin/: CMakeLists.txt  CameraControlPlugin.cc  CameraLockPlugin.cc  ExampleSimplified.cc  ExampleSimplified.hh  GUIExampleSpawnWidget.cc  GUIExampleSpawnWidget.hh  GUITextPlugin.cc  GUIZones.cc  MousePosePublisherPlugin.cc  hello.world  new_hello.world  new_system_gui.cc  (+10 more)
src/rqt_ez_publisher/: CMakeLists.txt
src/rqt_ez_publisher/src/rqt_ez_publisher/: ez_publisher_plugin.py  ez_publisher_widget.py
src/rqt_ez_publisher/src/rqt_ez_publisher.egg-info/: SOURCES.txt
src/sim_msgs/: CMakeLists.txt  package.xml
src/sim_msgs/msg/: Action.msg  BoxTypes.msg  CanPlaceAnswers.msg  EventLog.msg  HeadCmd.msg  Signal.msg  VHA.msg
src/sim_msgs/srv/: AttachObj.srv  GetBoxTypes.srv  MoveArm.srv  SetBoxCover.srv  SetBoxTypes.srv  SetQuestionButtons.srv
src/simple_hmi/: CMakeLists.txt  package.xml  setup.py
src/simple_hmi/scripts/: hmi.py  hmi_qt
src/simulator/: CMakeLists.txt  package.xml
src/simulator/include/: sim_controller.h
src/simulator/launch/: control.launch  test.launch
src/simulator/meshes/: box.blend  box.stl  box_lid.stl  box_opaque.stl  box_transparent.stl  button_move.blend  button_move.dae  epi_box.stl  epi_box_cover.stl  epistemic_scene.blend  epistemic_scene.dae  eye_l.dae  eye_r.dae  floor.blend  floor.dae  hand.blend  hand.dae  hand.stl  longer_goal.blend  longer_goal.dae  main_table.dae  new_goal.blend  new_goal.dae  new_scene.blend  new_scene.dae  q1.dae  q2.dae  q3.dae  q4.dae  q5.dae  question_buttons.blend  robot_head.blend  robot_head.dae  robot_head.mtl  scene.blend  scene.dae  table.blend  table.dae  tiago_eyes.blend  tiago_eyes.dae
src/simulator/scripts/: head_controller.py  saving_bird_camera.py  sound_player.py  spawner.py  test_cube.sdf
src/simulator/src/: attach_box.cpp  attach_box_eigen.cpp  attach_box_p1.cpp  attach_box_p2.cpp  attach_obj.cpp  attach_obj_tf.cpp  init_static_scene.cpp  move_arm.cpp  move_hand.cpp  move_human_body.cpp  new_move_multiple.cpp  node.cpp  own_move_hand.cpp  pick_box.cpp  sim_controller.cpp
src/simulator/worlds/: auto_pass_indicator.sdf  can_click_indicator_new.sdf  move_button.sdf  prompt_button.sdf  q1.sdf  q2.sdf  q3.sdf  q4.sdf  q5.sdf  stack.world  stack_new.world  t1.sdf  t2.sdf  t3.sdf  t4.sdf  window.world  world1.world  world2.world  z0.sdf  z1.sdf  z10.sdf  z11.sdf  z12.sdf  z13.sdf  z2.sdf  z3.sdf  z4.sdf  z5.sdf  z6.sdf  z7.sdf  z8.sdf  z9.sdf  zones.sdf
(+207 files in other folders)
