<?xml version="1.0"?>
<package>
  <name>simple_hmi</name>
  <version>0.6.1</version>
  <description>The simple_hmi package</description>

  <maintainer email="t.ogura@gmail.com">Takashi Ogura</maintainer>

  <license>BSD</license>

  <author email="t.ogura@gmail.com">Takashi Ogura</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rostest</build_depend>
  <build_depend>python3-catkin-pkg</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_py_common</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <test_depend>sensor_msgs</test_depend>

</package>
