<?xml version="1.0"?>
<package format="2">
  <name>simulator</name>
  <version>0.0.0</version>
  <description>The simulator package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="afavier@todo.todo">afavier</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <buildtool_depend>gazebo_ros_link_attacher</buildtool_depend>
  <build_depend>gazebo_ros_link_attacher</build_depend>
  <exec_depend>gazebo_ros_link_attacher</exec_depend>

  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
